Implement Trade Room and Waiver Drop functionality
1. Backend:
   - Created `FantasyTradeService` and `FantasyTradeController` to handle trade-related actions.
   - Implemented `dropPlayer` logic: Allows dropping a player if roster size >= 19 and the player is assigned to BENCH.
   - Updated `DraftPickRepository` with necessary query methods.

2. Frontend:
   - Implemented `trade.html` with tabs for Waiver, Trade, and FA.
   - Implemented Waiver tab logic: Fetches user's picks, filters for BENCH players, and displays a "Drop" button if roster size >= 19.

3. Tests:
   - Added `FantasyTradeServiceTest` to verify drop conditions (roster size, bench status).

Co-authored-by: YeonDo <26056354+YeonDo@users.noreply.github.com>